# AudioHax

./: .gitattributes  Cargo.toml  README.md  justfile  play
.github/workflows/: ci.yml
assets/: mappings.json
assets/soundfonts/: .gitignore  README.md
assets/test files/: HaxTest.txt
docs/: MORNING-DECISIONS-s41.md  USAGE.md  aesthetics-rule-inventory.md  assessment-composition-architecture.md  assessment-ws4-ux-crossplatform.md  audit-s51-dormancy.md  backlog-ostinato.md  composition-architecture-engine.md  composition-architecture-musical.md  design-s11-ws4-phase2-pure-rust-collapse.md  design-s12-midi-out-first-class.md  design-s13-diversity.md  design-s15-variety-engine.md  design-s15-variety-musical.md  design-s16-texture-engine.md  design-s16-texture-musical.md  design-s19-figuration-engine.md  design-s19-figuration-musical.md  design-s19-figuration-synthesis.md  design-s21-affect-mapping.md  design-s21-affective-fidelity.md  design-s21-engine-reframe.md  design-s21-musical-craft.md  design-s24-image-as-form-key-plan.md  design-s24-keyplan-aesthetics.md  design-s24-keyplan-theory.md  design-s26-multiexcursion-aesthetics.md  design-s26-multiexcursion-keyplan-engine.md  design-s30-pattern-library-slice1.md  design-s32-band-reachability.md  design-s33-gap4-penult-rework.md  design-s34-pattern-library-slice2.md  design-s38-aesthetics.md  design-s38-affect.md  design-s38-architecture.md  design-s38-synthesis.md  design-s38-theory.md  design-s40-path-divergence-2.md  design-s40-path-divergence.md  design-s40-slice2-workorder.md  (+98 more)
src/: chord_engine.rs  cli.rs  composition.rs  engine.rs  image_analysis.rs  image_source.rs  lib.rs  main.rs  mapping_loader.rs  midi_output.rs  modem.rs  pure_analysis.rs  seed.rs  synth_sink.rs  tui.rs
tests/: ab_harness_s31.rs  affect_s22.rs  cell_distinctness_s53.rs  cli_parse.rs  composition_s15.rs  counterpoint_s30.rs  diversity_s13.rs  engine_equivalence.rs  engine_seam.rs  figuration_s20.rs  home_s40.rs  hue_gap_s41.rs  keyplan_k2a.rs  keyplan_k2b.rs  keyplan_k3.rs  keyplan_s25.rs  keyplan_s29.rs  modem_cli_roundtrip.rs  modem_realair.rs  modem_roundtrip.rs  motif_s39.rs  motif_s41.rs  pattern_library_s34.rs  phase2_pure_pipeline.rs  prominence_s23.rs  prominence_s43.rs  qg_probe_band_isolation.rs  qg_s53_review.rs  render_cli_determinism_s55.rs  rhythm_variety_s50.rs  runtime_reachability_s37.rs  s52_probe_identity.rs  saliency_s18.rs  seed_s41.rs  texture_s17.rs  tui_render.rs  valence_mode_s36.rs  variety_s45.rs  variety_scorecard_s45.rs
tools/: ab-render.sh  ab-s48-render.sh  ab-s49-render.sh  ab-s50-render.sh  rs_sweep_analyze.py  rs_sweep_summary_simple.py
