[package]
name = "audiohax"       # changed to snake case
version = "0.1.0"
edition = "2021"

# ── Explicit bin tables for the IMAGE-dependent targets ──────────────────────
# These three targets import the `image`/`opencv` crates UNCONDITIONALLY, so they
# only compile under the default feature set. Declaring `required-features` lets
# `cargo build --no-default-features` (and `cargo test --no-default-features`)
# SKIP them instead of failing to compile them — which is what previously forced
# the modem integration test to be run via a manual rustc invocation. The
# modem-only bins (channel_sim, make_packetized, modem_encode, modem_decode) are
# left to autodiscovery so they still build with --no-default-features.
[[bin]]
name = "audiohax"          # src/main.rs — the image-to-music app (opencv + image)
path = "src/main.rs"
required-features = ["opencv", "image"]

[[bin]]
name = "make_tiled_payload"
path = "src/bin/make_tiled_payload.rs"
required-features = ["image"]

[[bin]]
name = "unpack_tiled_payload"
path = "src/bin/unpack_tiled_payload.rs"
required-features = ["image"]

[features]
# Default build pulls in the system-library-backed deps (opencv/midir/image) so a
# normal `cargo build`/`cargo build --release` behaves exactly as before. Building
# `--no-default-features` yields a pure-Rust library (music + modem) with no system libs.
default = ["opencv", "midir", "image"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = { version = "0.8", optional = true }
rand = "0.8"
opencv = { version = "0.95.1", optional = true }
anyhow = "1.0"

# Modem / codec related deps
hound = "3.5.1"          # wav read/write
hex = "0.4"              # hex parsing helpers
flate2 = "1.0"           # gzip compression
crc32fast = "1.3"        # CRC32 checks
thiserror = "1.0"        # structured decode-path error types (ModemError)
aes-gcm = "0.10"         # AES-GCM encryption (optional)
rand_core = "0.6"        # for secure random nonce
twoway = "0.2"
reed-solomon-erasure = "6"	# Reed-Solomon erasure coding (used for FEC)

image = { version = "0.24", optional = true }           # image loading/resizing and JPEG encoding

[dev-dependencies]
rand_chacha = "0.3"